# docutrust

./: .gitignore  README.md  docker-compose.yml  run_docutrust.sh
backend/: Dockerfile  pyproject.toml
backend/src/backend/: agents.py  config.py  db.py  main.py  rag_pipeline.py
frontend/: Dockerfile  index.html
frontend/src/: App.css  App.jsx  index.css
