[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "almohsinkhan", email = "almohsinkhan2004@gmail.com" }
]
requires-python = ">=3.14"
dependencies = [
    "faiss-cpu>=1.14.3",
    "fastapi>=0.138.0",
    "google-generativeai>=0.8.6",
    "httpx>=0.28.1",
    "langgraph>=1.2.6",
    "motor>=3.7.1",
    "pymongo>=4.17.0",
    "pymupdf>=1.27.2.3",
    "python-multipart>=0.0.32",
    "sentence-transformers>=5.6.0",
    "uvicorn>=0.49.0",
]

[build-system]
requires = ["uv_build>=0.11.7,<0.12.0"]
build-backend = "uv_build"
